--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
                 <version>2.2</version>
                 <configuration>          
                     <server>TomcatServer</server>
-                    <url>${remote.server}</url>
+                    <url>https://jacoblange.live/manager/text</url>
                     <username>${remote.user}</username>
                     <password>${remote.password}</password>
                     <update>true</update>    
